# Youki2

./: .gitignore  AUTHORS  CMakeLists.txt  README  config.h.in  info.backtrace.youki.app.service.in  info.backtrace.youki.mlibman.service.in  info.backtrace.youki.sentinel.service.in  install_manifest.txt  mpx-xchat.py  mpx.1.in  mpx.pc.in
api/: CMakeLists.txt  aque.cc  bad_caller.cpp  bad_dispatcher.cpp  bad_sync_call.cpp  connection_handler.cpp  dispatchables.cpp  dispatcher.cpp  error.cc  gstpuid.cc  hal.cc  libcontainer_pls.cc  libxml2-sax-base.cc  lyrics.cc  md5.c  metadatareader-taglib.cc  minisoup.cc  network.cc  operator_new.cpp  paths.cc  playlistparser-pls.cc  playlistparser-xspf.cc  random.cc  services.cc  signals.cc  sql.cc  tunnel_context_base.cpp  uri.cc  util-file.cc  util-graphics.cc  util-string.cc  util-ui.cc  xml.cc  xpath.cc  xspf-libxml2-sax.cc  xspf-write.cc
cmake/: tr1-test.cpp  (+6 more)
com/: CMakeLists.txt  album-info-window.cc  album-info-window.glade  album-info-window.ui  file-system-tree.cc  mb-import-album.cc  mb-import-album.glade  mb-import-album.ui  mpx-file-selector.cc  tagview.cc  treeview-popup.cc  view-albums-filter-plugin.cc  view-albums.cc  view-collections.cc
glade/: CMakeLists.txt  cppmod-mmkeys.glade  cppmod-prefs-audio-quality.glade  cppmod-prefs-audio.glade  cppmod-prefs-coverart.glade  cppmod-prefs-coverart.ui  cppmod-prefs-library.glade  cppmod-scrobbler.glade  mlibmanager.glade  pluginmanager.glade  preferences.glade
images/: CMakeLists.txt
jnetlib/: CHANGES.txt  CMakeLists.txt  README.txt  asyncdns.cpp  asyncdns.h  connection.cpp  connection.h  httpget.cpp  httpget.h  httppost.cpp  httppost.h  httpserv.h  jnetlib.h  listen.cpp  listen.h  netinc.h  sslconnection.cpp  sslconnection.h  ssllisten.cpp  ssllisten.h  udpconnection.h
libhal++/: CMakeLists.txt  context.cc  context.hh  device.cc  device.hh  drive.cc  drive.hh  exception.hh  hal++.hh  hcc-macros.hh  refptr.hh  storage.hh  types.hh  util.cc  util.hh  volume.cc  volume.hh
mcs/: CMakeLists.txt  base.h  gtk-bind.h  key.cpp  key.h  mcs-gtk-bind.cpp  mcs.cpp  mcs.h  subscriber.cpp  subscriber.h  types.h
mpxlib/: CMakeLists.txt  config.xml  import-folder.cc  import-folder.hh  import-share.cc  import-share.hh  library-mlibman.cc  library-mlibman.hh  library-scanner-thread-mlibman.cc  library-scanner-thread-mlibman.hh  main.cc  mlibmanager.cc  mlibmanager.hh  request-value.cc  request-value.hh
musicbrainz/: CMakeLists.txt  mb-libxml2-sax-release-list.cc  mb-libxml2-sax-release-list.hh  mb-libxml2-sax-release.cc  mb-libxml2-sax-release.hh  mb-libxml2-sax-tracks.cc  mb-libxml2-sax-tracks.hh  mb-utils.cc  mb-utils.hh  mbxml-types-v2.hh  mbxml-v2.cc  mbxml-v2.hh
remote/: CMakeLists.txt  youki.cc
sentinel/: CMakeLists.txt  youki-sentinel.cc
sigx/: CMakeLists.txt  __sigx_pch__.cpp  __sigx_pchfence__.h  connection_wrapper.cpp  glib_dispatcher.cpp  glib_threadable.cpp  signal_f_base.cpp  signal_wrapper_base.cpp  tunnel_base.cpp  tunnel_validity_tracker.cpp
taglib/: CMakeLists.txt
taglib/asf/: CMakeLists.txt  asfattribute.cpp  asfattribute.h  asffile.cpp  asffile.h  asfproperties.cpp  asfproperties.h  asftag.cpp  asftag.h  plugin.cc  resolver.cpp  resolver.h
taglib/audible/: CMakeLists.txt  audibleproperties.cpp  audibleproperties.h  audibletag.cpp  audibletag.h  plugin.cc  resolver.cpp  resolver.h  taglib_audiblefile.cpp  taglib_audiblefile.h
taglib/common/: CMakeLists.txt  common.cc  common.hh
taglib/flac/: CMakeLists.txt  plugin.cc
taglib/gio/: CMakeLists.txt  id3v1tag.h  id3v2extendedheader.h  id3v2frame.cpp  id3v2framefactory.cpp  id3v2synchdata.h  id3v2tag.cpp  oggflacfile.cpp  oggpageheader.cpp  taglib-gio.h  tbytevector.h  tfile.cpp  tfile.h  tlist.h  tmap.h  tstring.h
taglib/id3v2/: CMakeLists.txt  reader.cc  reader.hh
taglib/mod/: CMakeLists.txt  modfile.cpp  modfile.h  modproperties.cpp  modproperties.h  modtag.cpp  modtag.h  plugin.cc  plugin.loT  resolver.cpp  resolver.h
taglib/mp3/: CMakeLists.txt  plugin.cc
taglib/mp4/: CMakeLists.txt  aux.hh  mp4atom.cpp  mp4atom.h  mp4coverart.cpp  mp4file.cpp  mp4file.h  mp4item.cpp  mp4item.h  mp4properties.cpp  mp4properties.h  mp4tag.cpp  mp4tag.h  plugin.cc  resolver.cpp  resolver.h
taglib/mpc/: CMakeLists.txt  plugin.cc
taglib/ogg/: CMakeLists.txt  plugin.cc
taglib/rmff/: plugin.cc  resolver.cpp  resolver.h  rmff.cpp  rmff.h
taglib/sid/: CMakeLists.txt  plugin.cc  resolver.cpp  resolver.h  sidfile.cpp  sidfile.h  sidproperties.cpp  sidproperties.h  sidtag.cpp  sidtag.h
taglib/xiph/: CMakeLists.txt  reader.cc  reader.hh
ui/: CMakeLists.txt  albumdetails.ui  cppmod-mmkeys.ui  cppmod-prefs-audio-quality.ui  cppmod-prefs-audio.ui  cppmod-prefs-library.ui  cppmod-scrobbler.ui  mlibmanager.ui  pluginmanager.ui  preferences.ui
widgets/: CMakeLists.txt  blur-effect.c  cairo-blur.cc  cairo-extensions.cc  cell-renderer-album-data.cc  cell-renderer-cairo-surface.cc  cell-renderer-count.cc  cell-renderer-expander.c  cell-renderer-source.cc  cell-renderer-vbox.cc  dialog-simple-entry.cc  exponential-blur.c  exponential-blur.h  libbmpwidgets_la-button.loT  libmpxwidgets_la-ccwidgets.loT  rounded-frame.cc  rounded-layout.cc  task-dialog.cc  tidy-actor.c  tidy-actor.h  tidy-marshal.c  tidy-marshal.h  tidy-stylable.h  tidy-style.c  tidy-style.h  tidy-texture-reflection.c  tidy-texture-reflection.h  tidy-types.h  timed-confirmation.cc  widget-marshalers.list  youki-clutter-widget.cc  youki-status-icon.c  youki-status-icon.h  youki-toggle-button.cc  youki-tray-icon.c  youki-tray-icon.h  youki-tristate-button.cc
xmlcpp/: CMakeLists.txt  mb-artist-basic-1.0.cxx  mb-artist-basic-1.0.hxx  xsd-album-info-2.0.cxx  xsd-album-info-2.0.hxx  xsd-artist-info-2.0.cxx  xsd-artist-info-2.0.hxx  xsd-artist-similar-2.0.cxx  xsd-artist-similar-2.0.hxx  xsd-artist-toptracks-2.0.cxx  xsd-artist-toptracks-2.0.hxx  xsd-tag-toptracks-2.0.cxx  xsd-tag-toptracks-2.0.hxx  xsd-topalbums-2.0.cxx  xsd-topalbums-2.0.hxx  xsd-topartists-2.0.cxx  xsd-topartists-2.0.hxx  xsd-track-top-tags-2.0.cxx  xsd-track-top-tags-2.0.hxx  xspf.cxx  xspf.hxx
(+449 files in other folders)
