IF(HAVE_HAL)
  SET(mpx_api_ADD_SOURCES      hal.cc)
  SET(mpx_api_ADD_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/libhal++)
  SET(mpx_api_ADD_LIBRARIES    halcc)
ENDIF(HAVE_HAL)

INCLUDE_DIRECTORIES(
  ${PROJECT_BINARY_DIR}
  ${PROJECT_SOURCE_DIR}
  ${PROJECT_SOURCE_DIR}/include	
  ${ALSA_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIR}
  ${CAIROMM_INCLUDE_DIRS}
  ${CDIO_INCLUDE_DIRS}
  ${CDPARANOIA_INCLUDE_DIR}
  ${DBUS_INCLUDE_DIRS}
  ${EXO_INCLUDE_DIRS}
  ${GDL_INCLUDE_DIRS}
  ${GIOMM_INCLUDE_DIRS}
  ${GLIB_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${GST_INCLUDE_DIRS}
  ${GTKGLEXT_INCLUDE_DIRS}
  ${GTKMM_INCLUDE_DIRS}
  ${HAL_INCLUDE_DIRS}
  ${NM_INCLUDE_DIRS}
  ${LIBOFA_INCLUDE_DIRS}
  ${PYGTK_INCLUDE_DIRS}
  ${PYTHON_INCLUDE_DIRS}
  ${RSVG_INCLUDE_DIRS}
  ${SEXYMM_INCLUDE_DIRS}
  ${SIGX_INCLUDE_DIRS}
  ${SOUP_INCLUDE_DIRS}
  ${SQLITE_INCLUDE_DIRS}
  ${STARTUP_NOTIFY_INCLUDE_DIRS}
  ${TAGLIB_INCLUDE_DIRS}
  ${X11_X11_INCLUDE_PATH}
  ${XML_INCLUDE_DIRS}
  ${XPROTO_INCLUDE_DIRS}
  ${mpx_api_ADD_INCLUDE_DIRS}
)

SET(mpx_api_SOVERSION 0)
SET(mpx_api_VERSION 0.0)

SET(mpx_api_SOURCES
  aque.cc
  base64.c
  colorfade.cc
  error.cc
  libxml2-sax-base.cc
  md5.c
  metadatareader-taglib.cc
  minisoup.cc
  network.cc
  paths.cc
  random.cc
  services.cc
  signals.cc
  sql.cc
  uri.cc
  util-file.cc
  util-graphics.cc
  util-string.cc
  util-ui.cc
  xml.cc
  xpath.cc
  ${mpx_api_ADD_SOURCES}
)

ADD_LIBRARY(mpx-api SHARED ${mpx_api_SOURCES})

SET_TARGET_PROPERTIES(mpx-api
  PROPERTIES
  VERSION ${mpx_api_VERSION}
  SOVERSION ${mpx_api_SOVERSION}
)

TARGET_LINK_LIBRARIES(mpx-api
  ${ALSA_LIBRARIES}
  ${Boost_REGEX_LIBRARY}
  ${Boost_FILESYSTEM_LIBRARY}
  ${Boost_IOSTREAMS_LIBRARY}
  ${Boost_PYTHON_LIBRARY}
  ${CAIROMM_LIBRARIES}
  ${CDIO_LIBRARIES}
  ${CDPARANOIA_LIBRARY}
  ${DBUS_LIBRARIES}
  ${EXO_LIBRARIES}
  ${GDL_LIBRARIES}
  ${GIOMM_LIBRARIES}
  ${GLIBMM_LIBRARIES}
  ${GST_LIBRARIES}
  ${GTKGLEXT_LIBRARIES}
  ${GTKMM_LIBRARIES}
  ${HAL_LIBRARIES}
  ${NM_LIBRARIES}
  ${LIBOFA_LIBRARIES}
  ${PYGTK_LIBRARIES}
  ${PYTHON_LIBRARIES}
  ${RSVG_LIBRARIES}
  ${SEXYMM_LIBRARIES}
  ${SIGX_LIBRARIES}
  ${SM_LIBRARIES}
  ${SOUP_LIBRARIES}
  ${SQLITE_LIBRARIES}
  ${STARTUP_NOTIFY_LIBRARIES}
  ${TAGLIB_LIBRARIES}
  ${XML_LIBRARIES}
  ${X11_X11_LIB}
  mpx-parsers
  ${mpx_api_ADD_LIBRARIES}
)

INSTALL(TARGETS mpx-api LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
