INSTALL(
  FILES cppmod-mmkeys.glade
        cppmod-prefs-audio.glade
        cppmod-prefs-audio-quality.glade
        cppmod-prefs-library.glade
        cppmod-prefs-coverart.glade
        cppmod-scrobbler.glade
        mlibmanager.glade
        pluginmanager.glade
        preferences.glade				    
  DESTINATION ${MPX_PKGDATADIR}/glade
)
