INSTALL(
  FILES album-cover-loading.gif
	disc-multiple.png
        disc.png
        emblem-compilation.png
        emblem-soundtrack.png
        jewelcase_bot.png
        jewelcase_top.png
        mainwindow-button-maximize.png
        mainwindow-button-minimize.png
        mainwindow-button-quit.png
	mute-small-14x14px.png
	new.png
        splash.png
	youki-mlibman128x128.png
        youki512x512.png
        youki256x256.png
        youki128x128.png
	youki96x96.png
        youki64x64.png
        youki32x32.png
        youki16x16.png

  DESTINATION ${MPX_PKGDATA_DIR}/images
)
