INSTALL(
  FILES album-cover-loading.gif
	album-background.png
	artist.png
        disc.png
	disc-small.png
	dotmask.png
        emblem-compilation.png
        emblem-soundtrack.png
        jewelcase_bot.png
        jewelcase_top.png
	lastfm.png
	lensflare.png
	lensflare-vflipped.png
	media-repeat.png
	media-shuffle.png
	mute-small-14x14px.png
	new.png
	pin-grey.png
	pin-color.png
        splash.png
	square_bg.png
	turntable.png
	youki-mlibman128x128.png
        youki512x512.png
        youki256x256.png
        youki128x128.png
	youki96x96.png
        youki64x64.png
        youki32x32.png
        youki16x16.png

  DESTINATION ${MPX_PKGDATA_DIR}/images
)
