INCLUDE_DIRECTORIES(
  ${PROJECT_BINARY_DIR}
  ${GLIBMM_INCLUDE_DIRS}
  ${GTKMM_INCLUDE_DIRS}
  ${DBUS_INCLUDE_DIRS}
)

SET(youki_SOURCES
  youki.cc
)

ADD_EXECUTABLE(youki ${youki_SOURCES})

TARGET_LINK_LIBRARIES(youki
  ${GLIBMM_LIBRARIES}
  ${GTKMM_LIBRARIES}
  ${DBUS_LIBRARIES}
)

INSTALL(TARGETS youki RUNTIME DESTINATION ${MPX_BINDIR})
