ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(asf)
ADD_SUBDIRECTORY(flac)
ADD_SUBDIRECTORY(id3v2)
ADD_SUBDIRECTORY(mp3)
ADD_SUBDIRECTORY(mp4)
ADD_SUBDIRECTORY(mpc)
ADD_SUBDIRECTORY(ogg)
ADD_SUBDIRECTORY(xiph)

IF(HAVE_SID)
  ADD_SUBDIRECTORY(sid)
ENDIF(HAVE_SID)

IF(HAVE_MOD)
  ADD_SUBDIRECTORY(mod)
ENDIF(HAVE_MOD)
