INSTALL(
  FILES cppmod-mmkeys.ui
        cppmod-prefs-audio.ui
        cppmod-prefs-audio-quality.ui
        cppmod-prefs-library.ui
        cppmod-prefs-coverart.ui
        cppmod-scrobbler.ui
        mlibmanager.ui
        pluginmanager.ui
        preferences.ui
  DESTINATION ${MPX_PKGDATA_DIR}/ui
)
