INCLUDE_DIRECTORIES(
  ${PROJECT_BINARY_DIR}
  ${PROJECT_SOURCE_DIR}
  ${PROJECT_SOURCE_DIR}/include
  ${TAGLIB_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
)

SET(mpx_common_reader_SOURCES
  common.cc 
  common.hh
)

ADD_LIBRARY(mpx_common_reader STATIC ${mpx_common_reader_SOURCES})

SET_TARGET_PROPERTIES(mpx_common_reader
  PROPERTIES COMPILE_FLAGS -fPIC
)

TARGET_LINK_LIBRARIES(mpx_common_reader
  ${TAGLIB_LIBRARIES}
  ${GLIBMM_LIBRARIES}
)
